# Smart-Backlog-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  LICENSE  Makefile  README.api.md  README.md  docker-compose.api.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run-agents.sh  run-api.sh  run.sh  run_specific_test.py  simple-api.py  test-core.sh  test-fast.sh  test.sh  test_claude_config.py  test_claude_simple.py
.github/workflows/: test-coverage.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CLAUDE_SETUP.md  DATABASE_SETUP.md  DOCKER_GUIDE.md  FINAL_SUMMARY.md  IMPROVEMENTS.md  INDEX.md  PROBLEM_DEFINITION.md  PROJECT_REFLECTION.md  PYPROJECT_GUIDE.md  README.md  RUN_COMMANDS.md  SOLUTION_DESIGN.md  TESTING_APPROACH.md  USAGE_GUIDE.md
sample_data/: complex_meeting_notes.md  meeting_notes.txt  requirements_document.md
scripts/: dev.sh  docker.sh  quick_demo.sh  run_all_demos.sh  setup.sh
src/: __init__.py  config.py  demo_main.py  main_unified.py  simple_demo.py
src/agents/: __init__.py  backlog_coach.py  context_models.py  coordinator.py  document_analyst.py  priority_manager.py  pydantic_ai_main.py  story_writer.py
src/api/: __init__.py  auth.py  jobs.py  main.py  models.py  routes.py
src/database/: __init__.py  models.py  repository.py
src/generators/: __init__.py  priority_engine.py  user_story_generator.py
src/processors/: __init__.py  ai_processor.py  ai_processor_async.py  backlog_analyzer.py  document_processor.py
src/providers/: __init__.py  base_provider.py  mock_providers.py  openai_provider.py  provider_factory.py  pydantic_provider.py  rich_provider.py
src/utils/: __init__.py  caching_system.py  enhanced_error_handler.py  exception_handler.py  file_handler.py  logger_service.py  rich_cli.py  validators.py
tests/: README.md  conftest.py  test_achievable_modules_focused.py  test_agents_system.py  test_ai_processor_comprehensive.py  test_api_endpoints.py.disabled  test_async_processor.py  test_backlog_analyzer_comprehensive.py  test_base_models_comprehensive.py  test_coverage_boost.py  test_coverage_strategic.py  test_docker_verification.py  test_document_processor_comprehensive.py  test_enhanced_error_handler_comprehensive.py  test_enhanced_main_strategic.py  test_file_handler_comprehensive.py  test_final_coverage.py  test_final_push_50.py  test_generators_focused.py  test_main_unified_integration.py  test_mock_providers_comprehensive.py  test_priority_engine_comprehensive.py  test_provider_factory_comprehensive.py  test_providers_comprehensive.py  test_quick_coverage_boost.py  test_simple_coverage.py  test_strategic_50_percent_final.py  test_user_story_generator_comprehensive.py  test_user_story_generator_simple.py  test_validators_comprehensive.py
tests/reliable/: conftest.py  test_achieve_50_percent_final.py  test_ai_processor_refactored.py  test_async_ai_processor.py  test_backlog_analyzer_refactored.py  test_caching_focused.py  test_config.py  test_coverage_boost.py  test_database_models.py  test_database_repository.py  test_main_legacy.py  test_main_unified.py  test_models_fixed.py  test_priority_engine_refactored.py  test_processors_focused.py  test_provider_architecture_comprehensive.py  test_providers.py  test_real_implementations.py  test_rich_cli_refactored.py  test_user_story_generator_refactored.py  test_utils_focused.py
